# heliosCLI

./: .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  ADR.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  Makefile  OPTIMIZATION_PLAN.md  OPTIMIZATION_PLAN_V2.md  PLAN.md  PRD.md  README.md  Taskfile.yml  app.py  defs.bzl  package.json  pyproject.toml
.archive/lowercase-mirror-20260303/: helios-cli-nested-repos-dirs.txt  helios-cli-status.txt
.github/workflows/: ci.yml  cpu-profiling.yml  docs-site.yml  leak-detection.yml  network-optimization.yml  pages.yml  policy-gate.yml  quality.yml  stage-gates.yml
crates/arch_test/: Cargo.toml
crates/harness_cache/: Cargo.toml
crates/harness_checkpoint/: Cargo.toml
crates/harness_runner/: Cargo.toml
docs/: WORKLOG.md  index.md  package-lock.json
docs/.vitepress/: config.ts
docs/reference/: ADR-001-TEAMMATE-SYSTEM.md  (+11 more)
harness/: pyproject.toml
harness/benchmarks/: benchmark_runner.py  codex_concurrency_benchmark.py  harness_benchmark.py  llm_sla_benchmark.py  sla_benchmark.py  unified_benchmark.py
harness/src/harness/: __init__.py  cache.py  cache_optimized.py  circuit_breaker.py  latency_tracker.py  request_batcher.py  scaling.py  teammates.py  utils.py
harness/src/helios_harness_rs/: Cargo.toml
harness/src/helios_harness_rs/src/: cache.rs  lib.rs  resources.rs
harness/tests/: test_discoverer.py  test_perf_integration.py  test_run_harness.py  test_runner_unit.py  test_schema.py  test_schema_roundtrip.py  test_teammates.py
scripts/: bootstrap-dev.sh
tests/: test_pareto.py
(+61 files in other folders)
