[project]
name = "helios-harness"
version = "0.1.0"
description = "Reusable CLI/API/SDK quality harness for phase-2 evidence generation"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
helios-harness = "harness.scripts.run_harness:main"

[tool.hatch.build.targets.wheel]
packages = ["harness.src.harness"]
