[package]
name = "helios-harness-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "helios_harness_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
sysinfo = "0.32"
parking_lot = "0.12"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
